Attempt #1 Fixing the text fade on IOS devices

--- a/style.css
+++ b/style.css
@@ -163,7 +163,17 @@ body {
     content: "";
     width: 100%;
     height: 2.8em;
-    background: linear-gradient(rgba(255, 255, 255, 0), var(--bs-dark));
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ffffff+0,212529+100 */
+    background: rgb(255, 255, 255);
+    /* Old browsers */
+    background: -moz-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(33, 37, 41, 1) 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(33, 37, 41, 1) 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(33, 37, 41, 1) 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#212529', GradientType=0);
+    /* IE6-9 */
 }
 
 
